<resources>
    <string name="app_name">Lit</string>
    <string name="action_settings">Settings</string>
<!--    names of cards-->
    <string name="spades_2">2 Spades</string>
    <string name="spades_3">3 Spades</string>
    <string name="spades_4">4 Spades</string>
    <string name="spades_5">5 Spades</string>
    <string name="spades_6">6 Spades</string>
    <string name="spades_7">7 Spades</string>
    <string name="spades_8">8 Spades</string>
    <string name="spades_9">9 Spades</string>
    <string name="spades_10">10 Spades</string>
    <string name="spades_j">Jack Spades</string>
    <string name="spades_q">Queen Spades</string>
    <string name="spades_k">King Spades</string>
    <string name="spades_a">Ace Spades</string>
    <string name="clubs_2">2 Clubs</string>
    <string name="clubs_3">3 Clubs</string>
    <string name="clubs_4">4 Clubs</string>
    <string name="clubs_5">5 Clubs</string>
    <string name="clubs_6">6 Clubs</string>
    <string name="clubs_7">7 Clubs</string>
    <string name="clubs_8">8 Clubs</string>
    <string name="clubs_9">9 Clubs</string>
    <string name="clubs_10">10 Clubs</string>
    <string name="clubs_j">Jack Clubs</string>
    <string name="clubs_q">Queen Clubs</string>
    <string name="clubs_k">King Clubs</string>
    <string name="clubs_a">Ace Clubs</string>
    <string name="hearts_2">2 Hearts</string>
    <string name="hearts_3">3 Hearts</string>
    <string name="hearts_4">4 Hearts</string>
    <string name="hearts_5">5 Hearts</string>
    <string name="hearts_6">6 Hearts</string>
    <string name="hearts_7">7 Hearts</string>
    <string name="hearts_8">8 Hearts</string>
    <string name="hearts_9">9 Hearts</string>
    <string name="hearts_10">10 Hearts</string>
    <string name="hearts_j">Jack Hearts</string>
    <string name="hearts_q">Queen Hearts</string>
    <string name="hearts_k">King Hearts</string>
    <string name="hearts_a">Ace Hearts</string>
    <string name="diamonds_2">2 Diamonds</string>
    <string name="diamonds_3">3 Diamonds</string>
    <string name="diamonds_4">4 Diamonds</string>
    <string name="diamonds_5">5 Diamonds</string>
    <string name="diamonds_6">6 Diamonds</string>
    <string name="diamonds_7">7 Diamonds</string>
    <string name="diamonds_8">8 Diamonds</string>
    <string name="diamonds_9">9 Diamonds</string>
    <string name="diamonds_10">10 Diamonds</string>
    <string name="diamonds_j">Jack Diamonds</string>
    <string name="diamonds_q">Queen Diamonds</string>
    <string name="diamonds_k">King Diamonds</string>
    <string name="diamonds_a">Ace Diamonds</string>
    <string name="joker_b">Black Joker</string>
    <string name="joker_r">Red Joker</string>
<!--    names of sets-->
    <string name="spades_lower">Lower Spades</string>
    <string name="spades_higher">Higher Spades</string>
    <string name="hearts_lower">Lower Hearts</string>
    <string name="hearts_higher">Higher Hearts</string>
    <string name="diamonds_lower">Lower Diamonds</string>
    <string name="diamonds_higher">Higher Diamonds</string>
    <string name="clubs_lower">Lower Clubs</string>
    <string name="clubs_higher">Higher Clubs</string>
    <string name="jokers">Jokers</string>

<!--    used in app-->
    <string name="ask">Ask</string>
    <string name="transfer">Transfer</string>
    <string name="declare">Declare</string>
    <string name="your_cards">Your Cards</string>
    <string name="logs">Logs</string>
    <string name="none">None/Empty</string>
    <string name="lit_game_not_enough_args">Not enough information to start game!\nGame probably not started yet!!</string>
<!--    <string name="game_code">Game Code: %s</string>-->
    <string name="game_code">Game Code\n%s</string>
    <string name="waiting_for_turn">Waiting for %s to play</string>
    <string name="its_your_turn">It\'s your turn.\nAsk, Declare or Transfer.</string>
    <string name="incorrect_drop_turn">Transfer turn to the opposite team.</string>
    <string name="your_score">Apna Score\n%s</string>
    <string name="your_alias">%s</string>
    <string name="opponent_score">Unka Score\n%s</string>
    <string name="log_template_took">%1$s took %3$s from %2$s</string>
    <string name="log_template_ask">%1$s asked %2$s for %3$s</string>
    <string name="you">You</string>
    <string name="create_room">HOST A NEW GAME</string>
    <string name="join_room">JOIN AN EXISTING GAME</string>
    <string name="dropped_sets">Dropped sets</string>
    <string name="create_room_dialog_text">Enter new game details</string>
    <string name="join_room_dialog_text">Enter the game details</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_caps">CANCEL</string>
    <string name="ask_dialog_title">Who do you want to ask from?</string>
    <string name="ask_dialog_error">Please select all 3 fields to ask card!</string>
    <string name="transfer_dialog_title">Whom do you want to transfer to?</string>
    <string name="transfer_dialog_error">You didn\'t select any player name!</string>
    <string name="declare_dialog_title">Assign cards correctly</string>
    <string name="number_of_logs">Select the number of last transactions to show</string>
    <string name="game_room_code">Game room code</string>
    <string name="your_alias_nickname">Your alias</string>
    <string name="your_player_no">Your player no.</string>
    <string name="please_fill_all_fields">*Please fill all fields</string>
    <string name="images_of_cards">Images of Cards</string>
    <string name="init_lit_incomplete_fields_msg">Please fill all the values!</string>
    <string name="ask_player">Ask\n(%s)</string>
    <string name="player_name_cards">(%s)</string>
    <string name="welcome0">Welcome</string>
    <string name="welcome1">Aa gaye muh utha ke??</string>
    <string name="welcome2">Biyah ho gaya tumhara??</string>
    <string name="welcome3">Itna akele padh gaye life mei?</string>
    <string name="welcome4">Abhi bhi zinda ho?</string>
    <string name="welcome5">When your only tool is a hammer, all problems start looking like nails.</string>
    <string name="welcome6">The last thing I want to do is insult you. But it IS on the list.</string>
    <string name="welcome7">The only substitute for good manners is fast reflexes.</string>
    <string name="welcome8">Well, here I am! What are your other two wishes?</string>
    <string name="welcome9">My dog is an awesome fashion adviser. Every time I ask him what I look like in my clothes, he says “WOW!”</string>
    <string name="welcome10">I don’t have a girlfriend, but I know a girl that would get really mad if she heard me say that.</string>
    <string name="welcome11">The worst time to have a heart attack is during a game of charades.</string>
    <string name="welcome12">If you don’t pay your exorcist, do you get repossessed?</string>
    <string name="welcome13">I threw a boomerang a couple years ago; I now live in constant fear.</string>
    <string name="welcome14">We never really grow up, we only learn how to act in public.</string>
    <string name="welcome15">Har baar kuch accha milna zaroori nahi</string>
    <string name="play">Start</string>
    <string name="update_app">There\'s a newer version of the app with more games!</string>
    <string name="update_caps">UPDATE</string>
    <string name="you_won">You Won! Play Again?</string>
    <string name="you_lost">Ahh...Loser, Wanna Play Again?</string>
    <string name="rematch">Rematch</string>
    <string name="your_final_score">Your score: %s</string>
    <string name="their_final_score">Their score: %s</string>
    <string name="test_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner_test_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="force_upgrade"><![CDATA[We have new & exciting games & features in store for you! Upgrade your app now.]]></string>
</resources>
