<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/ask_title"
        style="@style/DojoDialogTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/txt_inverted"
        android:layout_margin="@dimen/standard_margin" />

    <Spinner
        android:id="@+id/ask_from_dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin_half"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"/>

    <Spinner
        android:id="@+id/ask_suit_dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin_half"
        android:backgroundTint="@color/navy_blue"
        android:spinnerMode="dropdown"/>

    <Spinner
        android:id="@+id/ask_card_dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin_half"
        android:backgroundTint="@color/navy_blue"
        android:spinnerMode="dropdown"/>

    <TextView
        android:id="@+id/ask_error_msg_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask_dialog_error"
        android:textColor="@color/colorError"
        android:layout_margin="@dimen/standard_margin"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">
        <com.dojo.lit.view.DojoTextView
            android:id="@+id/ask_positive_button"
            style="@style/DojoDialogButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin_half"
            android:padding="@dimen/standard_padding_half"
            android:text="@string/confirm"/>
        <com.dojo.lit.view.DojoTextView
            android:id="@+id/ask_negative_button"
            style="@style/DojoDialogButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin_half"
            android:padding="@dimen/standard_padding_half"
            android:text="@string/cancel"/>
    </LinearLayout>

</LinearLayout>