<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E2CFCF"
    android:paddingStart="@dimen/standard_padding"
    android:paddingEnd="@dimen/standard_padding">

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/gAdTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        ads:adSize="LARGE_BANNER"
        ads:adUnitId="@string/banner_test_ad_unit_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    fixme not constrained to google ad at top -->
    <com.dojo.lit.view.DojoTextView
        android:id="@+id/your_score_info_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin_half"
        android:layout_marginEnd="@dimen/standard_margin_half"
        android:layout_marginBottom="@dimen/standard_margin_half"
        android:layout_marginTop="@dimen/standard_margin"
        android:fontFamily="@font/amatica_sc_bold"
        android:gravity="center"
        android:padding="@dimen/standard_padding_half"
        android:textColor="@color/txt_inverted"
        app:layout_constraintBottom_toTopOf="@id/player_2_opp_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gAdTop"
        app:olSheet="true"
        app:olSheetCornerRadius="@dimen/standard_corner_radius"
        app:olSheetEndColor="@color/same_team_dark"
        app:olSheetGradientAngle="tl_br"
        app:olSheetStartColor="@color/same_team"
        tools:text="Apna Score\n0" />

    <com.dojo.lit.view.DojoTextView
        android:id="@+id/opponent_score_info_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin_half"
        android:layout_marginEnd="@dimen/standard_margin_half"
        android:layout_marginBottom="@dimen/standard_margin_half"
        android:fontFamily="@font/amatica_sc_bold"
        android:gravity="center"
        android:padding="@dimen/standard_padding_half"
        android:textColor="@color/txt_inverted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/your_score_info_tv"
        app:olSheet="true"
        app:olSheetCornerRadius="@dimen/standard_corner_radius"
        app:olSheetEndColor="@color/opp_team_dark"
        app:olSheetGradientAngle="tl_br"
        app:olSheetStartColor="@color/opp_team"
        tools:text="Unka Score\n0" />

    <com.dojo.lit.view.DojoTextView
        android:id="@+id/game_code_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin_half"
        android:layout_marginEnd="2dp"
        android:fontFamily="@font/advent_pro_bold"
        android:gravity="center"
        android:textColor="@color/txt_inverted"
        android:textIsSelectable="true"
        app:layout_constraintBottom_toBottomOf="@id/your_score_info_tv"
        app:layout_constraintEnd_toStartOf="@id/game_code_share"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/your_score_info_tv"
        app:layout_constraintTop_toTopOf="@id/your_score_info_tv"
        tools:text="Game Code\nxbvjkdm" />

    <View
        android:id="@+id/game_code_share"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="@dimen/standard_margin_half"
        android:background="@android:drawable/ic_menu_share"
        app:layout_constraintBottom_toBottomOf="@id/game_code_tv"
        app:layout_constraintEnd_toStartOf="@id/opponent_score_info_tv"
        app:layout_constraintStart_toEndOf="@id/game_code_tv"
        app:layout_constraintTop_toTopOf="@id/game_code_tv" />

    <com.dojo.lit.view.DojoTextView
        android:id="@+id/dropped_set_info_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin_half"
        android:fontFamily="@font/amatica_sc_bold"
        android:textColor="@color/txt_inverted"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Dropped sets : \nLow Spades" />

    <LinearLayout
        android:id="@+id/cards_held_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin_half"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_code_tv" />

    <com.dojo.lit.view.DojoTextView
        android:id="@+id/log_header_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin_half"
        android:fontFamily="@font/advent_pro_bold"
        android:text="@string/logs"
        android:textColor="@color/txt_inverted"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/player_1_opp_tv"
        app:layout_constraintBottom_toTopOf="@id/logs_info_sv"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/logs_info_sv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="@dimen/standard_margin_half"
        android:layout_marginTop="@dimen/standard_margin_half"
        android:background="@color/logs_bg_color"
        app:layout_constraintTop_toBottomOf="@id/log_header_tv"
        app:layout_constraintBottom_toTopOf="@id/your_cards_tv"
        app:layout_constraintStart_toStartOf="parent">

        <com.dojo.lit.view.DojoTextView
            android:id="@+id/logs_info_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin_half"
            android:fontFamily="@font/rajdhani_bold"
            android:paddingBottom="@dimen/standard_padding"
            android:textColor="@color/txt_inverted"
            tools:text="Reaa took 6 Spades from Ayan\nReaa asked 7 Spades from Ayan\nReaa asked 7 Spades from Ayan\nReaa asked 7 Spades from Ayan" />
    </ScrollView>

    <com.dojo.lit.view.DojoTextView
        android:id="@+id/turn_info"
        android:layout_width="210dp"
        android:layout_height="130dp"
        android:layout_marginStart="@dimen/standard_margin_xxx_double"
        android:layout_marginEnd="@dimen/standard_margin_xxx_double"
        android:layout_marginTop="@dimen/standard_margin_half"
        android:fontFamily="@font/indie_flower"
        android:gravity="center"
        android:padding="@dimen/standard_padding"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/player_2_opp_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.272"
        app:olSheet="true"
        app:olSheetColor="@color/not_your_turn"
        app:olSheetCornerRadius="@dimen/standard_corner_radius"
        app:olSheetStrokeColor="@color/txt_inverted"
        app:olSheetStrokeWidth="10dp"
        tools:text="@string/its_your_turn" />

    <com.dojo.lit.view.DojoOtherPlayerView
        android:id="@+id/player_2_opp_tv"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/standard_margin_half"
        android:layout_marginBottom="@dimen/standard_margin_half"
        android:foregroundGravity="center"
        app:layout_constraintTop_toBottomOf="@id/your_score_info_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Pazer\n(9)" />

    <com.dojo.lit.view.DojoOtherPlayerView
        android:id="@+id/player_1_opp_tv"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:foregroundGravity="center"
        android:layout_marginTop="@dimen/standard_margin_half"
        android:layout_marginEnd="@dimen/standard_margin_half"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/turn_info"
        app:layout_constraintTop_toBottomOf="@id/player_1_same_tv"
        app:olSheetEndColor="@color/opp_team_dark"
        app:olSheetStartColor="@color/opp_team"
        tools:text="Ask\nRocket\n(9)" />

    <com.dojo.lit.view.DojoOtherPlayerView
        android:id="@+id/player_1_same_tv"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:foregroundGravity="center"
        android:layout_marginTop="@dimen/standard_margin_x_double"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin_half"
        app:layout_constraintTop_toTopOf="@id/player_2_opp_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/turn_info"
        app:olSheetEndColor="@color/same_team_dark"
        app:olSheetStartColor="@color/same_team"
        tools:text="Tantan\n(9)" />

    <com.dojo.lit.view.DojoOtherPlayerView
        android:id="@+id/player_3_opp_tv"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:foregroundGravity="center"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin_half"
        app:layout_constraintStart_toEndOf="@id/turn_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player_2_same_tv"
        app:olSheetEndColor="@color/opp_team_dark"
        app:olSheetStartColor="@color/opp_team"
        tools:text="Tururu\n(9)" />

    <com.dojo.lit.view.DojoOtherPlayerView
        android:id="@+id/player_2_same_tv"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:foregroundGravity="center"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin_x_double"
        android:layout_marginStart="@dimen/standard_margin_half"
        app:layout_constraintTop_toTopOf="@id/player_2_opp_tv"
        app:layout_constraintStart_toEndOf="@id/turn_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:olSheetEndColor="@color/same_team_dark"
        app:olSheetStartColor="@color/same_team"
        tools:text="Sanyu\n(9)" />

    <com.dojo.lit.view.DojoTextView
        android:id="@+id/transfer_tv"
        style="@style/DojoTxnBtnStyle"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="@dimen/standard_margin_half"
        android:text="@string/transfer"
        app:layout_constraintEnd_toStartOf="@id/declare_tv"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/turn_info" />

    <com.dojo.lit.view.DojoTextView
        android:id="@+id/declare_tv"
        style="@style/DojoTxnBtnStyle"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/declare"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/transfer_tv"
        app:layout_constraintTop_toBottomOf="@id/turn_info" />

    <com.dojo.lit.view.DojoTextView
        android:id="@+id/your_cards_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin_half"
        android:layout_marginEnd="@dimen/standard_margin_half"
        android:fontFamily="@font/advent_pro_bold"
        android:text="@string/your_cards"
        android:textColor="@color/txt_inverted"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/logs_info_sv"
        app:layout_constraintBottom_toTopOf="@id/your_cards_sv"
        app:layout_constraintStart_toStartOf="parent" />

    <com.dojo.lit.view.DojoTextView
        android:id="@+id/your_alias_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin_half"
        android:fontFamily="@font/advent_pro_bold"
        android:text="@string/your_alias_nickname"
        android:textColor="@color/txt_inverted"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/your_cards_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/your_cards_tv" />

    <HorizontalScrollView
        android:id="@+id/your_cards_sv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_padding_x_half"
        app:layout_constraintTop_toBottomOf="@id/your_cards_tv"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/your_cards_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="@dimen/standard_margin_half"
            android:clipToPadding="false"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/playing_card_width"
                android:layout_height="@dimen/playing_card_height"
                android:scaleType="fitXY"
                android:src="@drawable/clubs_k" />

            <ImageView
                android:layout_width="@dimen/playing_card_width"
                android:layout_height="@dimen/playing_card_height"
                android:scaleType="fitXY"
                android:src="@drawable/clubs_2" />

            <ImageView
                android:layout_width="@dimen/playing_card_width"
                android:layout_height="@dimen/playing_card_height"
                android:scaleType="fitXY"
                android:src="@drawable/spades_10" />

            <ImageView
                android:layout_width="@dimen/playing_card_width"
                android:layout_height="@dimen/playing_card_height"
                android:scaleType="fitXY"
                android:src="@drawable/diamonds_2" />

            <ImageView
                android:layout_width="@dimen/playing_card_width"
                android:layout_height="@dimen/playing_card_height"
                android:scaleType="fitXY"
                android:src="@drawable/clubs_k" />

            <ImageView
                android:layout_width="@dimen/playing_card_width"
                android:layout_height="@dimen/playing_card_height"
                android:scaleType="fitXY"
                android:src="@drawable/clubs_2" />

            <ImageView
                android:layout_width="@dimen/playing_card_width"
                android:layout_height="@dimen/playing_card_height"
                android:scaleType="fitXY"
                android:src="@drawable/spades_10" />

            <ImageView
                android:layout_width="@dimen/playing_card_width"
                android:layout_height="@dimen/playing_card_height"
                android:scaleType="fitXY"
                android:src="@drawable/diamonds_2" />

            <ImageView
                android:layout_width="@dimen/playing_card_width"
                android:layout_height="@dimen/playing_card_height"
                android:scaleType="fitXY"
                android:src="@drawable/diamonds_2" />
        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>